Bug 276467 - kded crashed after I disconnected from vpn
Summary: kded crashed after I disconnected from vpn
Status: RESOLVED FIXED
Alias: None
Product: Network Management
Classification: Unmaintained
Component: KDED Module (other bugs)
Version First Reported In: unspecified
Platform: openSUSE Linux
: NOR crash
Target Milestone: ---
Assignee: Will Stephenson
URL:
Keywords:
: 277710 278301 283690 287499 (view as bug list)
Depends on:
Blocks:
 
Reported: 2011-06-25 13:41 UTC by S. Burmeister
Modified: 2011-11-25 14:52 UTC (History)
9 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
New crash information added by DrKonqi (6.19 KB, text/plain)
2011-07-26 16:44 UTC, Diego
Details
New crash information added by DrKonqi (7.71 KB, text/plain)
2011-08-03 09:53 UTC, Geert Janssens
Details
New crash information added by DrKonqi (7.87 KB, text/plain)
2011-08-19 02:16 UTC, Sergey Nikulov
Details
New crash information added by DrKonqi (6.19 KB, text/plain)
2011-09-23 12:08 UTC, Robert Kingman
Details

Note You need to log in before you can comment on or make changes to this bug.
Description S. Burmeister 2011-06-25 13:41:51 UTC
Application: kded4 ($Id$)
KDE Platform Version: 4.6.4 (4.6.4)
Qt Version: 4.7.3
Operating System: Linux 2.6.37.6-0.5-default i686
Distribution: "openSUSE 11.4 (i586)"

-- Information about the crash:
- What I was doing when the application crashed:

After I disconnected from VPN kded crashed. I disconnected by clicking on the small close button next to the active vpn connection. It was a vpnc connection.

-- Backtrace:
Application: KDE-Dienst (kdeinit4), signal: Aborted
[Current thread is 1 (Thread 0xb58e6710 (LWP 1929))]

Thread 3 (Thread 0xafce3b70 (LWP 1934)):
#0  0xffffe430 in __kernel_vsyscall ()
#1  0xb612103e in poll () from /lib/libc.so.6
#2  0xb5b600bb in g_poll () from /lib/libglib-2.0.so.0
#3  0xb5b4fc46 in ?? () from /lib/libglib-2.0.so.0
#4  0xb5b4ffce in g_main_context_iteration () from /lib/libglib-2.0.so.0
#5  0xb6f19fc7 in QEventDispatcherGlib::processEvents (this=0x81917b8, flags=...) at kernel/qeventdispatcher_glib.cpp:424
#6  0xb6eeaa6d in QEventLoop::processEvents (this=0xafce32c0, flags=...) at kernel/qeventloop.cpp:149
#7  0xb6eeac99 in QEventLoop::exec (this=0xafce32c0, flags=...) at kernel/qeventloop.cpp:201
#8  0xb6debd49 in QThread::exec (this=0x8192158) at thread/qthread.cpp:492
#9  0xaff64f67 in ?? () from /usr/lib/kde4/kded_bluedevil.so
#10 0xb6dee993 in QThreadPrivate::start (arg=0x8192158) at thread/qthread_unix.cpp:320
#11 0xb6d71b05 in start_thread () from /lib/libpthread.so.0
#12 0xb612bd5e in clone () from /lib/libc.so.6

Thread 2 (Thread 0xaf2ffb70 (LWP 1939)):
#0  0xb5c0422b in clock_gettime () from /lib/librt.so.1
#1  0xb6e480b5 in do_gettime () at tools/qelapsedtimer_unix.cpp:123
#2  qt_gettime () at tools/qelapsedtimer_unix.cpp:140
#3  0xb6f1af36 in updateCurrentTime (this=0xaf304db4, tm=...) at kernel/qeventdispatcher_unix.cpp:339
#4  QTimerInfoList::timerWait (this=0xaf304db4, tm=...) at kernel/qeventdispatcher_unix.cpp:442
#5  0xb6f1977b in timerSourcePrepareHelper (src=<value optimized out>, timeout=0xaf2ff11c) at kernel/qeventdispatcher_glib.cpp:136
#6  0xb6f1981d in timerSourcePrepare (source=0xaf304d80, timeout=<value optimized out>) at kernel/qeventdispatcher_glib.cpp:169
#7  0xb5b4ea70 in g_main_context_prepare () from /lib/libglib-2.0.so.0
#8  0xb5b4f8e2 in ?? () from /lib/libglib-2.0.so.0
#9  0xb5b4ffce in g_main_context_iteration () from /lib/libglib-2.0.so.0
#10 0xb6f19fc7 in QEventDispatcherGlib::processEvents (this=0x81d5e20, flags=...) at kernel/qeventdispatcher_glib.cpp:424
#11 0xb6eeaa6d in QEventLoop::processEvents (this=0xaf2ff2b0, flags=...) at kernel/qeventloop.cpp:149
#12 0xb6eeac99 in QEventLoop::exec (this=0xaf2ff2b0, flags=...) at kernel/qeventloop.cpp:201
#13 0xb6debd49 in QThread::exec (this=0x81d41e0) at thread/qthread.cpp:492
#14 0xb6eca7fd in QInotifyFileSystemWatcherEngine::run (this=0x81d41e0) at io/qfilesystemwatcher_inotify.cpp:248
#15 0xb6dee993 in QThreadPrivate::start (arg=0x81d41e0) at thread/qthread_unix.cpp:320
#16 0xb6d71b05 in start_thread () from /lib/libpthread.so.0
#17 0xb612bd5e in clone () from /lib/libc.so.6

Thread 1 (Thread 0xb58e6710 (LWP 1929)):
[KCrash Handler]
#7  0xffffe430 in __kernel_vsyscall ()
#8  0xb60838df in raise () from /lib/libc.so.6
#9  0xb6085220 in abort () from /lib/libc.so.6
#10 0xb5984005 in _dbus_abort () at dbus-sysdeps.c:94
#11 0xb5979911 in _dbus_warn_check_failed (format=0xb5989ec0 "arguments to %s() were incorrect, assertion \"%s\" failed in file %s line %d.\nThis is normally a bug in some application using the D-Bus library.\n") at dbus-internals.c:289
#12 0xb596905e in dbus_message_new_method_call (destination=0x8283848 "org.freedesktop.NetworkManager", path=0x8298e90 "any", interface=0x8185ff8 "org.freedesktop.DBus.Introspectable", method=0x8188b30 "Introspect") at dbus-message.c:1199
#13 0xb5d03dfc in q_dbus_message_new_method_call (message=..., error=0xbf9f5d0c) at qdbus_symbols_p.h:264
#14 QDBusMessagePrivate::toDBusMessage (message=..., error=0xbf9f5d0c) at qdbusmessage.cpp:133
#15 0xb5cfc7eb in QDBusConnectionPrivate::sendWithReply (this=0x8196318, message=..., sendMode=1, timeout=-1) at qdbusintegrator.cpp:1853
#16 0xb5cfd4dd in QDBusConnectionPrivate::findMetaObject (this=0x8196318, service=..., path=..., interface=..., error=...) at qdbusintegrator.cpp:2323
#17 0xb5d0d68f in QDBusInterfacePrivate::QDBusInterfacePrivate (this=0x82a9cd0, serv=..., p=..., iface=..., con=...) at qdbusinterface.cpp:158
#18 0xb5d0d7e4 in QDBusInterface::QDBusInterface (this=0xbf9f5fac, service=..., path=..., interface=..., connection=..., parent=0x0) at qdbusinterface.cpp:220
#19 0xae2dca55 in NMDBusSettingsService::interfaceConnectionDeactivated (this=0x81eab90) at /usr/src/debug/networkmanagement-0.9.2.60git.1308248784/backends/NetworkManager/nmdbussettingsservice.cpp:274
#20 0xae2a669c in NMDBusSettingsService::qt_metacall (this=0x81eab90, _c=QMetaObject::InvokeMetaMethod, _id=<value optimized out>, _a=0xbf9f60cc) at /usr/src/debug/networkmanagement-0.9.2.60git.1308248784/build/backends/NetworkManager/moc_nmdbussettingsservice.cpp:95
#21 0xb6ef207d in QMetaObject::metacall (object=0x81eab90, cl=QMetaObject::InvokeMetaMethod, idx=8, argv=0xbf9f60cc) at kernel/qmetaobject.cpp:237
#22 0xb6f014cc in QMetaObject::activate (sender=0x8268680, m=0xae296180, local_signal_index=2, argv=0x0) at kernel/qobject.cpp:3278
#23 0xae2628a5 in Knm::InterfaceConnection::deactivated (this=0x8268680) at /usr/src/debug/networkmanagement-0.9.2.60git.1308248784/build/libs/internals/moc_interfaceconnection.cpp:146
#24 0xae28070b in Knm::InterfaceConnection::deactivate (this=0x8268680) at /usr/src/debug/networkmanagement-0.9.2.60git.1308248784/libs/internals/interfaceconnection.cpp:113
#25 0xaf45e6d1 in InterfaceConnectionAdaptor::deactivate (this=0x82456e0) at /usr/src/debug/networkmanagement-0.9.2.60git.1308248784/build/libs/service/interfaceconnectionadaptor.cpp:99
#26 0xaf45ea00 in InterfaceConnectionAdaptor::qt_metacall (this=0x82456e0, _c=QMetaObject::InvokeMetaMethod, _id=6, _a=0xbf9f626c) at /usr/src/debug/networkmanagement-0.9.2.60git.1308248784/build/libs/service/interfaceconnectionadaptor.moc:132
#27 0xb5cf8080 in QDBusConnectionPrivate::deliverCall (this=0x80bf3b8, object=0x82456e0, msg=..., metaTypes=..., slotIdx=0) at qdbusintegrator.cpp:941
#28 0xb5cf92d7 in QDBusConnectionPrivate::activateCall (this=0x80bf3b8, object=0x82456e0, flags=273, msg=...) at qdbusintegrator.cpp:844
#29 0xb5cf99a8 in QDBusConnectionPrivate::activateObject (this=0x80bf3b8, node=..., msg=..., pathStartPos=136623728) at qdbusintegrator.cpp:1429
#30 0xb5cf9ea8 in QDBusActivateObjectEvent::placeMetaCall (this=0x82838e8) at qdbusintegrator.cpp:1523
#31 0xb6f00dbf in QObject::event (this=0x8268680, e=0x82838e8) at kernel/qobject.cpp:1217
#32 0xb63f3684 in QApplicationPrivate::notify_helper (this=0x80e4340, receiver=0x8268680, e=0x82838e8) at kernel/qapplication.cpp:4462
#33 0xb63fc427 in QApplication::notify (this=0xbf9f6c10, receiver=0x8268680, e=0x82838e8) at kernel/qapplication.cpp:3862
#34 0xb7547cc1 in KApplication::notify (this=0xbf9f6c10, receiver=0x8268680, event=0x82838e8) at /usr/src/debug/kdelibs-4.6.4/kdeui/kernel/kapplication.cpp:311
#35 0xb6eeb78e in QCoreApplication::notifyInternal (this=0xbf9f6c10, receiver=0x8268680, event=0x82838e8) at kernel/qcoreapplication.cpp:731
#36 0xb6eef51c in sendEvent (receiver=0x0, event_type=0, data=0x80582a0) at kernel/qcoreapplication.h:215
#37 QCoreApplicationPrivate::sendPostedEvents (receiver=0x0, event_type=0, data=0x80582a0) at kernel/qcoreapplication.cpp:1372
#38 0xb6eef66c in QCoreApplication::sendPostedEvents (receiver=0x0, event_type=0) at kernel/qcoreapplication.cpp:1265
#39 0xb6f19df4 in sendPostedEvents (s=0x80e6700) at kernel/qcoreapplication.h:220
#40 postEventSourceDispatch (s=0x80e6700) at kernel/qeventdispatcher_glib.cpp:277
#41 0xb5b4f509 in g_main_context_dispatch () from /lib/libglib-2.0.so.0
#42 0xb5b4fd10 in ?? () from /lib/libglib-2.0.so.0
#43 0xb5b4ffce in g_main_context_iteration () from /lib/libglib-2.0.so.0
#44 0xb6f19f7b in QEventDispatcherGlib::processEvents (this=0x80b87f8, flags=...) at kernel/qeventdispatcher_glib.cpp:422
#45 0xb64aa1da in QGuiEventDispatcherGlib::processEvents (this=0x80b87f8, flags=...) at kernel/qguieventdispatcher_glib.cpp:204
#46 0xb6eeaa6d in QEventLoop::processEvents (this=0xbf9f6b74, flags=...) at kernel/qeventloop.cpp:149
#47 0xb6eeac99 in QEventLoop::exec (this=0xbf9f6b74, flags=...) at kernel/qeventloop.cpp:201
#48 0xb6eef740 in QCoreApplication::exec () at kernel/qcoreapplication.cpp:1008
#49 0xb63f13d4 in QApplication::exec () at kernel/qapplication.cpp:3736
#50 0xb550343d in kdemain (argc=1, argv=0x809f050) at /usr/src/debug/kdelibs-4.6.4/kded/kded.cpp:925
#51 0x0804e514 in launch (argc=1, _name=0x805273b "kded4", args=<value optimized out>, cwd=0x0, envc=0, envs=<value optimized out>, reset_env=false, tty=0x0, avoid_loops=false, startup_id_str=0x80525c3 "0") at /usr/src/debug/kdelibs-4.6.4/kinit/kinit.cpp:734
#52 0x08050f24 in main (argc=) at /usr/src/debug/kdelibs-4.6.4/kinit/kinit.cpp:1849

Possible duplicates by query: bug 268134.

Reported using DrKonqi
Comment 1 Lamarque V. Souza 2011-07-13 20:15:06 UTC
*** Bug 277710 has been marked as a duplicate of this bug. ***
Comment 2 aderocha 2011-07-23 00:25:24 UTC
*** Bug 278301 has been marked as a duplicate of this bug. ***
Comment 3 Diego 2011-07-26 16:44:08 UTC
Created attachment 62215 [details]
New crash information added by DrKonqi

kded4 ($Id$) on KDE Platform 4.6.5 (4.6.5) using Qt 4.7.3

- What I was doing when the application crashed:

Disconnected from a VPN connection using Plasma NM. After the crash both ethernet and wireless disconnected.

-- Backtrace (Reduced):
#8  0x0000003b022304f5 in _dbus_abort () at dbus-sysdeps.c:94
#9  0x0000003b02227435 in _dbus_warn_check_failed (format=0x3b02236628 "arguments to %s() were incorrect, assertion \"%s\" failed in file %s line %d.\nThis is normally a bug in some application using the D-Bus library.\n") at dbus-internals.c:289
#10 0x0000003b02218d4a in dbus_message_new_method_call (destination=0x2140768 "org.freedesktop.NetworkManager", path=0x1f5b6f8 "any", interface=0x213f978 "org.freedesktop.DBus.Introspectable", method=0x1f5bbe8 "Introspect") at dbus-message.c:1199
#11 0x0000003b6dc2b7c1 in q_dbus_message_new_method_call (message=<value optimized out>, error=0x7fff7f2d4db0) at qdbus_symbols_p.h:264
#12 QDBusMessagePrivate::toDBusMessage (message=<value optimized out>, error=0x7fff7f2d4db0) at qdbusmessage.cpp:133
Comment 4 Geert Janssens 2011-08-03 09:53:43 UTC
Created attachment 62497 [details]
New crash information added by DrKonqi

kded4 ($Id$) on KDE Platform 4.6.5 (4.6.5) using Qt 4.7.3

- What I was doing when the application crashed:

Disconnected from a VPN connection using Plasma NM.

-- Backtrace (Reduced):
#10 0x00bb0d55 in _dbus_abort () at dbus-sysdeps.c:94
#11 0x00ba68c6 in _dbus_warn_check_failed (format=0xbb6ad8 "arguments to %s() were incorrect, assertion \"%s\" failed in file %s line %d.\nThis is normally a bug in some application using the D-Bus library.\n") at dbus-internals.c:289
#12 0x00b96546 in dbus_message_new_method_call (destination=0x961ea40 "org.freedesktop.NetworkManager", path=0x92db460 "any", interface=0x961ea00 "org.freedesktop.DBus.Introspectable", method=0x94491d8 "Introspect") at dbus-message.c:1199
#13 0x0063a413 in q_dbus_message_new_method_call (message=..., error=0xbf8c36dc) at qdbus_symbols_p.h:264
#14 QDBusMessagePrivate::toDBusMessage (message=..., error=0xbf8c36dc) at qdbusmessage.cpp:133
Comment 5 Sergey Nikulov 2011-08-19 02:16:40 UTC
Created attachment 62966 [details]
New crash information added by DrKonqi

kded4 ($Id$) on KDE Platform 4.6.5 (4.6.5) using Qt 4.7.3

- What I was doing when the application crashed:

Disconnect from VPN (vpnc) using knetworkmanager applet

-- Backtrace (Reduced):
#8  0x00000034e3a30505 in _dbus_abort () at dbus-sysdeps.c:94
#9  0x00000034e3a27445 in _dbus_warn_check_failed (format=0x34e3a36648 "arguments to %s() were incorrect, assertion \"%s\" failed in file %s line %d.\nThis is normally a bug in some application using the D-Bus library.\n") at dbus-internals.c:289
#10 0x00000034e3a18d5a in dbus_message_new_method_call (destination=0x28b2638 "org.freedesktop.NetworkManager", path=0x27f3128 "any", interface=0x2802d98 "org.freedesktop.DBus.Introspectable", method=0x2867d18 "Introspect") at dbus-message.c:1199
#11 0x00000034e8e2b7c1 in q_dbus_message_new_method_call (message=<value optimized out>, error=0x7fffd7d982f0) at qdbus_symbols_p.h:264
#12 QDBusMessagePrivate::toDBusMessage (message=<value optimized out>, error=0x7fffd7d982f0) at qdbusmessage.cpp:133
Comment 6 Robert Kingman 2011-09-23 12:08:59 UTC
Created attachment 63888 [details]
New crash information added by DrKonqi

kded4 ($Id$) on KDE Platform 4.6.5 (4.6.5) using Qt 4.7.3

- What I was doing when the application crashed: I had just clicked on the close button for a VPN connection.

-- Backtrace (Reduced):
#10 0x005f5d65 in _dbus_abort () at dbus-sysdeps.c:94
#11 0x005eb8d6 in _dbus_warn_check_failed (format=0x5fbad8 "arguments to %s() were incorrect, assertion \"%s\" failed in file %s line %d.\nThis is normally a bug in some application using the D-Bus library.\n") at dbus-internals.c:289
#12 0x005db556 in dbus_message_new_method_call (destination=0xa1d7690 "org.freedesktop.NetworkManager", path=0xa150028 "any", interface=0xa1d3f18 "org.freedesktop.DBus.Introspectable", method=0xa18c580 "Introspect") at dbus-message.c:1199
#13 0x0583f413 in q_dbus_message_new_method_call (message=..., error=0xbfddba5c) at qdbus_symbols_p.h:264
#14 QDBusMessagePrivate::toDBusMessage (message=..., error=0xbfddba5c) at qdbusmessage.cpp:133
Comment 7 Christoph Feck 2011-10-10 10:09:58 UTC
*** Bug 283690 has been marked as a duplicate of this bug. ***
Comment 8 Lamarque V. Souza 2011-10-26 13:56:31 UTC
Does this problema happen with NM-0.9 and Plasma NM nm09 branch?

I am wondering why all reports are from OpenSuse 11.4 and Fedora 14, both ship with very outdated versions of Plasma NM. Can you upgrade to branch nm09 and see if that solve your problems?
Comment 9 Markus Schmidt 2011-10-26 14:22:04 UTC
I updated the plasmoid.

old: 0.9.1git20110829-9.1 from KDE:UpdatedApps / openSUSE_11.4

new: plasmoid-networkmanagement-0.9.2.65git.1318231111-111.1.x86_64.rpm from KDE:Release:47/openSUSE_11.4

The crash still occurs. My solution at the moment: Quitting the complete network connection instead of the VPN tunnel. Then there is no crash.
Comment 10 Lamarque V. Souza 2011-10-26 15:27:40 UTC
Which version appears in "Manager Connections" -> Other? Which glibc and dbus versions do you use?
Comment 11 Markus Schmidt 2011-10-27 06:23:33 UTC
There is no version stated at "other". Just get the information from Yast Software Manager (version 0.9.1git20110829-9.1)

glibc is version 2.11.3-12.19.1
dbus-1 is version 1.4.1-7.8.1
dbus-1-x11 is version 1.4.1-6.1
Comment 12 Lamarque V. Souza 2011-10-27 06:58:18 UTC
Git commit 55f03a404b93acd41776f22fd01fc375c38e2105 by Lamarque V. Souza.
Committed on 27/10/2011 at 08:55.
Pushed by lvsouza into branch 'nm08'.

Prevents crash when disconnecting VPN connections.

BUG: 276467

M  +6    -7    backends/NetworkManager/nmdbussettingsservice.cpp

http://commits.kde.org/networkmanagement/55f03a404b93acd41776f22fd01fc375c38e2105
Comment 13 Lamarque V. Souza 2011-11-25 14:52:33 UTC
*** Bug 287499 has been marked as a duplicate of this bug. ***