Prevents crash when disconnecting VPN connections.

BUG: 276467